@@ -1,3 +1,8 @@
+2004-10-08  Derek Price  <derek@ximbiot.com>
+
+	* client.c (open_connection_to_server, close_connection_to_server,
+	handle_redirect): Add traces.
+
 2004-10-07  Derek Price  <derek@ximbiot.com>
 
 	* Makefile.am (cvs_SOURCES): Add parseinfo.h.
